// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with all props assigned 1`] = `
<h2
  className="test-class Heading slate"
  id="test-heading-1"
>
  Test
</h2>
`;

exports[`Heading should render with required props 1`] = `
<h2
  className="Heading gray headingLines"
  id=""
>
  Test
</h2>
`;
